--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title></title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="../css_advanced/styles.css">
     </head>
     <body>
@@ -196,45 +200,66 @@
                     </div>
                     <button class="register-btn">REGISTER FOR FREE</button>
                 </section>
-                <section>
-                    <h1> FAQ </h1>
-                    <div>
-                        <div>
-                            <div>
-                                <h1> How does this work?</h1>
-                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
-                            </div>
-                            <div>
-                                <h1> How does this work?</h1>
-                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
-                            </div>
+                <section class="faq-section">
+                    <h1>F.A.Q.</h1>
+                    <div class="faq-list">
+                        <div class="faq-item">
+                            <h2>How does this work?</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
                         </div>
-                        <div>
-                            <div>
-                                <h1> How does this work?</h1>
-                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
-                            </div>
-
-                            <div>
-                                <h1> How does this work?</h1>
-                                <p>Lorem dispum kasd fdjadflkfd adsfdlkj flk a fd?</p>
-                            </div>
+                        <div class="faq-item">
+                            <h2>How does this work?</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="faq-list">
+                        <div class="faq-item">
+                            <h2>How does this work?</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </div>
+                        <div class="faq-item">
+                            <h2>How does this work?</h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                                laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                                voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+                                non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
                         </div>
                     </div>
                 </section>
             </main>
-        <footer>
-            <div>
-                <div>
-                    <img src="" alt="My image">
-                    <div>
-                        <a href=""> <img src="" alt="footer-image"> </a>
-                        <a href=""> <img src="" alt="footer-image"> </a>
-                        <a href=""> <img src="" alt="footer-image"> </a>
+            <footer>
+                <div class="ft-container">
+                    <div class="nav-ft">
+                        <img src="imgs/logo.png" alt="">
+                        <div>
+                            <a href=""><img src="svgs/facebook.svg" alt=""></a>
+                            <a href=""><img src="svgs/twitter.svg" alt=""></a>
+                            <a href=""><img src="svgs/Combined Shape.svg" alt=""></a>
+                        </div>
                     </div>
+                    <p>©smileschool 2020</p>
                 </div>
-                <p> This is a text </p>
-            </div>
-        </footer>
+            </footer>
     </body>
 </html>
