started to correct video section

--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -87,11 +87,11 @@
                             </div>
                             <div class="rating-duration">
                                 <div class="rating">
-                                    <img src="" alt="img">
-                                    <img src="" alt="img">
-                                    <img src="" alt="img">
-                                    <img src="" alt="img">
-                                    <img src="" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_5.svg" alt="img">
                                 </div>
                                 <p class="duration"> 8 mins </p>
                             </div>
@@ -107,13 +107,13 @@
 
                                 <h3> <span class="secondary-color">Philip Massey</span> </span></h3>
                             </div>
-                            <div>
+                            <div class="rating-duration">
                                 <div class="rating">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_5.svg" alt="img">
                                 </div>
                                 <p class="duration"> 8 mins </p>
                             </div>
@@ -129,13 +129,13 @@
 
                                 <h3> <span class="secondary-color">Philip Massey</span> </span></h3>
                             </div>
-                            <div>
+                            <div class="rating-duration">
                                 <div class="rating">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_5.svg" alt="img">
                                 </div>
                                 <p class="duration"> 8 mins </p>
                             </div>
@@ -153,11 +153,11 @@
                             </div>
                             <div class="rating-duration">
                                 <div class="rating">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
-                                    <img src="">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_1.svg" alt="img">
+                                    <img src="../css_advanced/svgs/Star_5.svg" alt="img">
                                 </div>
                                 <p class="duration"> 8 mins </p>
                             </div>
@@ -201,7 +201,7 @@
                     <button class="register-btn">REGISTER FOR FREE</button>
                 </section>
                 <section class="faq-section">
-                    <h1 style="text-align: center;">F.A.Q.</h1>
+                    <h1 id="faq-head">F.A.Q.</h1>
                     <div class="faq-list">
                         <div class="faq-item">
                             <h2>How does this work?</h2>
